--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: Trendster
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Shiny App for Time Series Packages from Google, Facebook, and Twitter
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: Kenneth J. Preston
+Maintainer: Kenneth J. Preston <kenneth.j.preston@gmail.com>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
@@ -14,16 +14,12 @@ Imports: shiny,
     shinydashboard,
     prophet,
     rhandsontable,
-    plotly,
-    DT,
     CausalImpact,
+    plotly,
     gtrendsR,
     zoo,
-    dplyr,
     magrittr,
-    AnomalyDetection,
-    Rcpp,
-    rstan
+    DT
+Suggests: testthat,
+    dplyr
 Remotes: twitter/AnomalyDetection
-
-
